--- a/README.adoc
+++ b/README.adoc
@@ -204,6 +204,30 @@ fi
 
 ----
 
+== `check-broken-symlinks [path1] [path2] [...]`
+
+[source,sh,linenums]
+----
+#!/bin/sh
+
+#
+# Checks for broken symlinks.
+#
+
+for file_ in "$@" ; do
+    if [ -L "${file_}" ]; then
+        if readlink -q "${file_}" >/dev/null ; then
+            echo "Good link: ${file_}"
+        else
+            echo "${file_}: bad link" >/dev/stderr
+        fi
+    else
+        echo "${file_} is not a symlink"
+    fi
+done
+
+----
+
 
 == License
 
