--- a/README.adoc
+++ b/README.adoc
@@ -144,7 +144,7 @@ exec ${PLAN9}/bin/9 "$@"
 
 ----
 
-== `9-term` - runs Plan9port terminal emulator within an 9 environment
+=== `9-term` - runs Plan9port terminal emulator within an 9 environment
 
 [source,sh,linenums]
 ----
@@ -158,7 +158,7 @@ exec ${PLAN9}/bin/9 "$@"
 
 ----
 
-== `acme` - runs Plan9port Acme with `9`
+=== `acme` - runs Plan9port Acme with `9`
 
 Font can be chosen by setting the `font` environment variable.  By default, it
 is set to `/m/9p-fonts/Droid Sans Mono/11a/font`.
@@ -182,7 +182,7 @@ acme -a \
 
 ----
 
-== `cat-which <executable>` - `cat $(which executable)`
+=== `cat-which <executable>` - `cat $(which executable)`
 
 Finds full path to executable and displays the content.
 
@@ -204,7 +204,7 @@ fi
 
 ----
 
-== `check-broken-symlinks [path1] [path2] [...]`
+=== `check-broken-symlinks [path1] [path2] [...]`
 
 [source,sh,linenums]
 ----
