--- a/README.adoc
+++ b/README.adoc
@@ -352,7 +352,7 @@ prefix $comment_char^' '
 test -z "${DISPLAY}" && exit 0
 
 setxkbmap us -variant dvp -option lv3:ralt_alt
-xmodmap <<EOF
+xmodmap <( cat <<EOF
 ! -*- mode: xmodmap-generic -*-
 ! No modifier map for mod5
 clear mod5
@@ -387,6 +387,7 @@ add control = Control_R
 add mod5 = Alt_R
 
 EOF
+)
 
 ----
 
