--- a/README.adoc
+++ b/README.adoc
@@ -391,6 +391,68 @@ EOF
 
 ----
 
+=== `config-keymap-cmpitg` - keyboard layout: Programmer Dvorak + Ctrl-Alt swapped + CapsLock-Escape swapped
+
+.file::config-keymap-cmpitg
+[source,sh,linenums]
+----
+#!/bin/bash
+
+test -z "${DISPLAY}" && exit 0
+
+##############################################################################
+
+do-notify-short "Setting specialized keylayout"
+newline
+setxkbmap us -variant dvp -option lv3:ralt_alt
+if (test -e ~/.Xmodmap); then
+	xmodmap ~/.Xmodmap
+else
+	xmodmap <( cat <<EOF
+! -*- mode: xmodmap-generic -*-
+! No modifier map for mod5
+clear mod5
+add mod4 = Super_R
+
+! Swap Escape and Capslock
+remove Lock = Caps_Lock
+add Lock = Escape
+keysym Caps_Lock = Escape
+keysym Escape = Caps_Lock
+
+! Swap left Control and Alt
+remove control = Control_L
+remove mod1 = Alt_L
+remove mod1 = Meta_L
+keysym Control_L = Meta_L
+keysym Control_L = Alt_L
+keysym Alt_L = Control_L
+add mod1 = Meta_L
+add mod1 = Alt_L
+add control = Control_L
+
+! Swap right Control and Alt
+remove control = Control_R
+remove mod1 = Alt_R
+keysym Control_R = Alt_R
+keysym Alt_R = Control_R
+add mod1 = Alt_R
+add control = Control_R
+
+EOF
+)
+fi
+
+config-logitech-trackball-marble-righty
+# config-logitech-trackball-marble-lefty
+config-logitech-g300-mouse
+config-logitech-g502-mouse
+config-lenovo-mouse
+
+config-touchpad
+config-touchpad
+
+----
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like me, buy me
