--- a/README.adoc
+++ b/README.adoc
@@ -454,6 +454,24 @@ config-touchpad
 
 ----
 
+=== `config-keymap-steam` - keyboard layout: Programmer Dvorak without AltGr
+
+Because Steam doesn't work with swapped modifiers.
+
+.file::config-keymap-steam
+[source,sh,linenums]
+----
+#!/bin/bash
+
+test -z "${DISPLAY}" && exit 0
+
+do-notify-short "Setting keyboard layout for Steam"
+newline
+setxkbmap us -variant dvp -option lv3:ralt_alt
+
+config-logitech-g502-mouse
+
+----
 
 == License
 
