--- a/README.adoc
+++ b/README.adoc
@@ -473,6 +473,36 @@ config-logitech-g502-mouse
 
 ----
 
+=== Config mouses
+
+Enables natural scrolling and tweaks acceleration profile.
+
+==== `config-lenovo-n700-mouse`
+
+.file::config-lenovo-n700-mouse
+[source,sh,linenums]
+----
+#!/bin/bash
+
+ID=$(xinput list 2>/dev/null \
+			| grep "Dual Mode WL Touch Mouse N700" \
+			| head -1 \
+			| cut -d'=' -f2 \
+			| awk '{ print $1 }')
+
+test -z "${ID}" && exit 0
+
+do-notify-short "Configuring Dual Mode WL Touch Mouse N700"
+
+do-notify-short "* Set natural scrolling"
+xinput set-prop "${ID}" "Evdev Scrolling Distance" -1, -1, 1
+
+do-notify-short "* Set pointer acceleration"
+xinput set-prop "${ID}" "Device Accel Profile" 7
+
+----
+
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like me, buy me
