--- a/README.adoc
+++ b/README.adoc
@@ -484,21 +484,23 @@ Enables natural scrolling and tweaks acceleration profile.
 ----
 #!/bin/bash
 
-ID=$(xinput list 2>/dev/null \
+id_=$(xinput list 2>/dev/null \
 			| grep "Dual Mode WL Touch Mouse N700" \
 			| head -1 \
 			| cut -d'=' -f2 \
 			| awk '{ print $1 }')
 
-test -z "${ID}" && exit 0
+test -z "${id_}" && exit 0
+
+##############################################################################
 
 do-notify-short "Configuring Dual Mode WL Touch Mouse N700"
 
 do-notify-short "* Set natural scrolling"
-xinput set-prop "${ID}" "Evdev Scrolling Distance" -1, -1, 1
+xinput set-prop "${id_}" "Evdev Scrolling Distance" -1, -1, 1
 
 do-notify-short "* Set pointer acceleration"
-xinput set-prop "${ID}" "Device Accel Profile" 7
+xinput set-prop "${id_}" "Device Accel Profile" 7
 
 ----
 
