--- a/README.adoc
+++ b/README.adoc
@@ -540,6 +540,45 @@ setxkbmap us -device "${id_keyboard_}"
 
 ----
 
+==== `config-logitech-g502-mouse`
+
+.file::config-logitech-g502-mouse
+[source,sh,linenums]
+----
+#!/bin/bash
+
+# http://www.x.org/wiki/Development/Documentation/PointerAcceleration/
+
+##############################################################################
+
+id_=$(xinput list \
+			 | grep "Logitech Gaming Mouse G502" \
+			 | head -1 \
+			 | cut -d'=' -f2 \
+			 | awk '{ print $1 }')
+id_2_=$(xinput list \
+			   | grep "Logitech Gaming Mouse G502" \
+			   | tail -1 \
+			   | cut -d'=' -f2 \
+			   | awk '{ print $1 }')
+
+test -z "${id_}"   && exit 0
+test -z "${id_2_}" && exit 0
+
+##############################################################################
+
+do-notify-short "Configuring Logitech G502 mouse"
+
+do-notify-short "* Set natural scrolling"
+xinput set-prop "${id_2_}" "Evdev Scrolling Distance" -1, -1, 1
+
+do-notify-short "* Tuning mouse movement"
+xinput set-prop "${id_2_}" "Device Accel Profile" 7
+xinput set-prop "${id_2_}" "Device Accel Constant Deceleration" 2
+xinput set-prop "${id_2_}" "Device Accel Adaptive Deceleration" 1
+
+----
+
 
 == License
 
