--- a/README.adoc
+++ b/README.adoc
@@ -923,8 +923,8 @@ Returns the average CPU usage measured in 3 consecutive seconds, using `mpstat`.
 # Using `mpstat', calculates average CPU usage in 3 seconds.
 #
 
-if which mpstat &>/dev/null ; then
-	echo You need mpstat installed for this command to work
+if ! which mpstat &>/dev/null ; then
+	echo You need mpstat installed for this command to work >&2
 	exit 1
 fi
 
