fix: `which' should swallow both stdout and stderr

--- a/README.adoc
+++ b/README.adoc
@@ -200,7 +200,7 @@ Finds full path to executable and displays the content.
 
 exec_="$@"
 
-if $(which "${exec_}" >/dev/null); then
+if $(which "${exec_}" &>/dev/null); then
 	cat $(which "${exec_}")
 else
 	echo "${exec_} not found" >&2
