--- a/README.adoc
+++ b/README.adoc
@@ -1098,6 +1098,17 @@ if (which notify-send >/dev/null >[2=1]) {
 
 ----
 
+=== `docker-remove-orphaned-containers`
+
+.file::docker-remove-orphaned-containers
+[source,sh]
+----
+#!/bin/bash
+
+docker rm $(docker ps -aq)
+
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
