feat: add en2fi

--- a/README.adoc
+++ b/README.adoc
@@ -1137,6 +1137,28 @@ tail -n +$n_lines
 
 ----
 
+=== `en2fi` - translate from English to Finnish
+
+.file::en2fi
+[source,sh]
+----
+#!/usr/bin/env rc
+
+#
+# Translates from English to Finnish with Google Translate, using
+# soimort/translate-shell tool.
+#
+
+if (! which gtranslate >/dev/null >[2=1]) {
+	echo gtranslate command not found >[1=2]
+	echo Make sure you have soimort/translate-shell installed >[1=2]
+	exit 1
+}
+
+TARGET_LANG=fi gtranslate $*
+
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
